# actions

./: .ansible-lint  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .yamllint.yml  LICENSE  Makefile  README.md  ansible.cfg  package-lock.json  package.json  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/actions/delete-cache/: action.yml
.github/workflows/: approve.yml  dependabot.yml  main.yml  pr.yml  test-setup-ansible.yml  test-setup-node.yml  test-setup-python.yml  tests.yml
auto-review/: action.yml
conventional-commits/: action.yml
pr-conventional-commits/: action.yml
setup-ansible/: action.yml
setup-node/: action.yml  node.sh
setup-python/: action.yml
test/setup-ansible/: ansible.cfg  requirements-dev.txt
test/setup-node/npm/: .gitignore  .yamllint.yml  package-lock.json  package.json
test/setup-node/pnpm/: .gitignore  .yamllint.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
test/setup-node/yarn/: .gitignore  package.json
test/setup-node/yarn1/: .gitignore  package.json
test/setup-python/: requirements-dev.txt  requirements.txt
test/setup-python/pip/: requirements-dev.txt  requirements.txt
test/setup-python/pipenv/: Pipfile
test/setup-python/poetry/: pyproject.toml
