[tool.poetry]
name = "setup-python-poetry"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "5.2.11"
djangorestframework = "3.16.1"
langchain = "0.3.27"
langchain-anthropic = "0.3.19"
langchain-core = "0.3.81"
pydantic = "2.11.7"

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
django-stubs = "5.2.2"
djangorestframework-stubs = "3.16.2"
mdformat = "0.7.22"
mdformat-frontmatter = "2.0.8"
mdformat-gfm = "0.4.1"
mypy = "1.18.2"
pre-commit = "4.3.0"
pre-commit-hooks = "6.0.0"
pylint = "3.3.8"
pylint-django = "2.6.1"
pytest = "8.4.2"
pytest-asyncio = "1.1.0"
pytest-django = "4.11.1"
yamllint = "1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
