[tool.poetry]
name = "setup-python-poetry"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "6.0.2"
djangorestframework = "3.16.1"
langchain = "1.2.9"
langchain-anthropic = "1.3.2"
langchain-core = "1.2.11"
pydantic = "2.12.5"

[tool.poetry.group.dev.dependencies]
black = "26.1.0"
django-stubs = "5.2.9"
djangorestframework-stubs = "3.16.8"
mdformat = "1.0.0"
mdformat-front-matters = "2.0.0"
mdformat-gfm = "1.0.0"
mypy = "1.19.1"
pre-commit = "4.5.1"
pre-commit-hooks = "6.0.0"
pylint = "4.0.4"
pylint-django = "2.7.0"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-django = "4.11.1"
yamllint = "1.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
