[tool.poetry]
name = "setup-python-poetry"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
Django = "^6.0.5"
djangorestframework = "^3.17.1"
langchain = "^1.2.18"
langchain-anthropic = "^1.4.3"
langchain-core = "^1.3.3"
pydantic = "^2.13.4"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
django-stubs = "^6.0.3"
djangorestframework-stubs = "^3.16.9"
mdformat = "^1.0.0"
mdformat-front-matters = "^2.0.0"
mdformat-gfm = "^1.0.0"
mypy = "^2.0.0"
pre-commit = "^4.6.0"
pre-commit-hooks = "^6.0.0"
pylint = "^4.0.5"
pylint-django = "^2.7.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-django = "^4.12.0"
yamllint = "^1.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
